Fix for newInstance() is deprecated